# optimized-traffic-simulator

./: .gitignore  README.md  pyproject.toml  requirements.txt
agents/: __init__.py  dqn.py  replay_buffer.py  train.py
results/: METRICS.md  metrics.json
scripts/: baseline.py  evaluate.py  play.py  random_drive.py
tests/: test_env.py
trafficsim/: __init__.py  config.py  entities.py  env.py  grid.py  render.py  sim.py  viewer.py
